Add function to upload firmware

--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -1494,4 +1494,19 @@ input, select, textarea {
 	/* Show the tooltip text when you mouse over the tooltip container */
 	* .tooltip:hover .tooltiptext {
 		visibility: visible;
+  }
+  
+  /* Custom stuff for animated spinner*/
+	@keyframes spin {
+		0% { -webkit-transform: rotate(0deg); transform:rotate(0deg); } 
+		50% { -webkit-transform: rotate(180deg); transform:rotate(180deg); } 
+		100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } 
+		
+	}
+
+	/* This is the class name given by the Font Awesome component when icon contains 'spinner' */
+	.fa-spinner {
+		/* Apply 'spinner' keyframes looping once every second (1s)  */
+		animation: spin 2s linear infinite;
+		display: inline-block;
 	}
