--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -626,6 +626,19 @@ input, select, textarea {
 		line-height: 1.5em;
 	}
 
+
+	input[type="range"] {
+		-webkit-appearance: none;
+		height: 15px;
+		border-radius: 5px;  
+		background: #d3d3d3;
+		outline: none;
+		opacity: 0.7;
+		-webkit-transition: .2s;
+		transition: opacity .2s;
+		direction: rtl
+	}
+
 		@media screen and (max-width: 1280px) {
 
 			body, input, textarea, select {
