Initial work on compression waves feature
Not all configuration options are working for this yet

--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -66,12 +66,14 @@ input::-moz-focus-inner {
 	padding: 0;
 }
 
+/*
 input, select, textarea {
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	-ms-appearance: none;
 	appearance: none;
 }
+*/
 
 /* Colummn */
 
